test/reflection/SelfReferentialDefaultValue.compiler-result.txt
reflection/SelfReferentialDefaultValue.java:15: error: cyclic annotation element type
	Annotation value() default @SelfRef;
	                           ^
1 error
